# python-fastapi-starter

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  dev.env  docker-compose.yaml  pyproject.toml  test.env
.github/actions/setup/: action.yaml
.github/workflows/: checks.yaml
alembic/: env.py
alembic/versions/: 77c013fcce6e_sync_db_with_model.py  bb1cf18c089c_init.py  da9a304a67ce_sync_db_with_model.py  f4c1ac7c468e_initial_database_setup.py
app/: dependencies.py  main.py
app/api/: index.py
app/api/middleware/: auth.py  db_session.py
app/api/routes/: auth.py  user.py
app/config/: __init__.py  config.py  logging.py
app/db/: session.py
app/model/: base.py  user.py
app/repo/: __init__.py  base.py  user.py
app/schema/: auth.py  user.py
app/service/: __init__.py  auth.py  user.py
tests/: conftest.py
tests/api/routes/: test_auth_route.py  test_user_route.py
